[metadata]
name = OdenGraphQt
version = attr: OdenGraphQt.pkg_info.__version__
author = Johnny Chan, Huey Yeng
maintainer = Huey Yeng
license = MIT License
license_files = LICENSE.md
long_description = file: README.md
long_description_content_type = text/markdown
description = Node graph framework for PySide6/PyQt6 that can be
              implemented and re-purposed into applications.
classifiers = Operating System :: OS Independent
              License :: OSI Approved :: MIT License
              Programming Language :: Python :: 3.8
url = https://github.com/hueyyeng/OdenGraphQt
project_urls = 
    Source = https://github.com/hueyyeng/OdenGraphQt/
    Tracker = https://github.com/hueyyeng/OdenGraphQt/issues

[options]
packages = find:
include_package_data = True
python_requires = >=3.8
install_requires =
    qtpy>=2.3.1

[options.extras_require]
PySide6 = PySide6>=6.5.0

[options.packages.find]
exclude = examples

[options.package_data]
OdenGraphQt = widgets/icons/node_base.png
